@startuml CardState


scale 2
skinparam DefaultFontName 源ノ角ゴシック Code JP Medium

package View
{

    rectangle カードオブジェクト{
        class CardView
        {
            + CardInfo<<get>>
            - CardState

            + OnBeginDrag()
            +OnDrag()
            +OnDrop()
            +OnEndDrag()
        }

    }



    

}


package Command
{
        class Command_Attack
    class Command_Play
}

package CardState
{
    abstract class CardState
    {
            + abstract OnBeginDrag()
            + abstract OnDrag()
            + abstract OnDrop()
            + abstract OnEndDrag()
    }

    class CardState_Deck
    {
            + OnBeginDrag()
            + OnDrag()
            + OnDrop()
            + OnEndDrag()
    }
    class CardState_Hand
        {
            + OnBeginDrag()
            + OnDrag()
            + OnDrop()
            + OnEndDrag()
    }
    class CardState_Field
        {
            + OnBeginDrag()
            + OnDrag()
            + OnDrop()
            + OnEndDrag()
    }
    class CardState_Discard
        {
            + OnBeginDrag()
            + OnDrag()
            + OnDrop()
            + OnEndDrag()
    }

    CardState_Deck-u-|>CardState
    CardState_Hand-u-|>CardState
    CardState_Field-u-|>CardState
    CardState_Discard-u-|>CardState

}

CardView->CardState : ステートパターン
CardState_Hand->Command_Play
CardState_Field-->Command_Attack

@enduml